--- a/week-3/stylesheets/my-berkshire-stylesheet.css
+++ b/week-3/stylesheets/my-berkshire-stylesheet.css
@@ -1,3 +1,138 @@
 html {
-	background-color:red;
+    background-color:#ffffff;
 }
+div {
+    color:#000080;
+}
+
+a{
+    color:#800080;
+}
+
+a:visited{
+    color:#FF0000;
+}
+#caps::first-letter{
+    font-size: 200%;
+}
+#caps{
+    float:left;
+    margin:auto;
+}
+
+h3{/*parent*/
+    position:relative;
+    width:100vw;
+    margin-right:auto;
+    margin-left:42.2vw;
+    top:0vh;
+}
+#header-2{/*child of h3*/
+    font-weight:bold;
+    text-align:center;
+    line-height:0px;
+    position:absolute;
+    top:5vh;
+    width:100vw;
+    margin-right:auto;
+    margin-left:0vw;
+    border-bottom:1px solid gray;
+}
+
+/*treat each column as it's own 'child' of the parent 'body'*/
+.column-l{
+    float: left;
+    margin: 0 20px 0 0;
+    position:absolute;
+    top:13vh; left:5vw;
+    width:50vw;
+}
+.column-r{
+    float:right;
+    margin:0 20px 0 0;
+    position:absolute;
+    top:13vh; left:50vw;
+}
+
+/*fix line spacing*/
+ul{
+    line-height: 250%;
+}
+li>span>p{
+    line-height: 1px;
+}
+
+/* Geico Banner*/
+.prefooter{
+    position:absolute;
+    bottom:30vh;
+    text-align:center;
+    line-height:0px;
+    font-size:10px;
+    width:100vw;
+    margin-left:auto;
+    margin-right:auto;
+    border-top:1px solid gray;
+    border-bottom:1px solid gray;
+    padding-bottom: 1vh;
+}
+img{
+    width:75px;
+    height:15px;
+}
+/* Comments or Questions */
+footer{
+    position:absolute;
+    bottom:24.5vh;
+    text-align:left;
+    font-size:12px;
+    width:100vw;
+    padding-bottom:1.5vh;
+    border-bottom:1px solid gray;
+}
+.legaldisclaimer{
+    position:absolute;
+    text-align:left;
+    font-size:16px;
+    top: 75vh;left:.5vw;
+}
+
+.copyright{
+    position:absolute;
+    bottom:1px;
+    text-align:left;
+    font-size:8px;
+    top: 78vh;left:.5vw;
+}
+
+/*
+Reflection
+
+What is important to know when linking an external file (like a stylesheet) to an HTML file?
+
+You need to know exactley where the stylesheet is in relation to your html file. That way
+you can set the correct path between your HTML file to your stylesheet. Other than that, I would
+say keep good naming conventions to to make everything easier to follow.
+
+What tricks did you use to help you with positioning? How hard was it to get the site as you wanted it?
+
+We used abosolute positioning a lot to get element just where we wanted them. The side effect though is
+that our website is not very responsive, it only looks good at certain screen sizes. If you make the screen
+size smaller, you'll see that if really messes with our format. Very difficult to get the site that we wanted.
+
+
+What CSS did you use to modify the element style (like size, color, etc.)
+
+We used CSS elements to manipulate background color, font size, font color, margins, paddings, and borders.
+
+Did you modify the HTML to include classes or ids? If so, which did you chose and why? If you didn't, how would you know which one to add to your HTML?
+
+We used both classes and ids. Elements that we wanted to have the same properties, we labeled them
+with a class. Elements where we only needed to change their properties and noone else, we used
+an id.
+
+When you compared your site to the actual code base, which do you think had cleaner code that followed best practices and why?
+
+Well our code is simplier than the actual source code, but their website followed better practices because
+their website is actually responsive compared to ours.
+*/
